--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wiki History Searchor</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: url('./src/assets/image/wikimedia_logo.png') center/cover no-repeat;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  </style>
+
+<!-- index.html -->
+<script src="https://cdn.jsdelivr.net/npm/vue@3"></script>
+<script src="https://unpkg.com/vue-router@4"></script>
 </head>
 <body>
   <div id="app"></div>
